added outline and major changesd

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <div class="jumbotron text-center">
   <h1>About Me</h1>
-  <p>I am a 2nd year CS student at Georgia Institute of Technology with a concentration in Intelligence and Theory. I am very interested in machine learning specificaly natural langugage processing and reccommender systems. I am very interested in Deep Learning research and love learning about latest advancements where new discoveries are being discovered monthly! Other interests include playing basketball and watching movies</p> 
+  <p>I am a 2nd year CS student at Georgia Institute of Technology with a concentration in Intelligence and Theory. Other interests include playing basketball and watching movies</p> 
   <!-- <p>I am very interested in Machine Learning, specifically Natural Language Processing and Reccommender Systems.</p>
   <p>Other interests include basketball</p>   -->
 </div>
