--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
+        <a class="nav-link" href="#C4">About Me</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Resume</a>
@@ -31,18 +31,25 @@
     </ul>
   </div>  
 </nav>
+<!-- 
+<a href="http://www.linkedin.com/in/marcmarone" class="icon fa-linkedin-square" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"><span class="label">LinkedIn</span></a>
+
+ -->
+
+
 
 <div class="jumbotron text-center">
   <h1>About Me</h1>
-  <p>I am a 2nd year CS student at Georgia Institute of Technology with a concentration in Intelligence and Theory. Other interests include playing basketball and watching movies</p> 
+  <p>I am a 2nd year CS student at Georgia Institute of Technology with a concentration in Intelligence and Theory. I am interested in research in machine learning, especiall deep learning, including AutoML, NLP, and recommender systems. <!-- I love keeping track of the latest advancements in deep learning. --> Other interests include playing basketball and watching movies.</p> 
   <!-- <p>I am very interested in Machine Learning, specifically Natural Language Processing and Reccommender Systems.</p>
   <p>Other interests include basketball</p>   -->
 </div>
 
+
 <div class="container">
   <div class="row">
     <div class="col-sm-4">
-      <h3>Column 1</h3>
+      <h3 >Column 1</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
@@ -58,6 +65,6 @@
     </div>
   </div>
 </div>
-
+<!-- <h1 href "C4"> helkrjelrj </h1> -->
 </body>
 </html>
