--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Mohan Dodda</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -23,10 +23,10 @@
         <a class="nav-link" href="#C4">About Me</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Resume</a>
+        <a class="nav-link" href="https://drive.google.com/file/d/1Scryz8EMArCMUYvhZS2wuiPHQi8NngHK/view" target="_blank">Resume</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
+        <a class="nav-link" href="#">Contact Me</a>
       </li>    
     </ul>
   </div>  
@@ -39,12 +39,12 @@
 
 
 <div class="jumbotron text-center">
-  <h1>About Me</h1>
-  <p>I am a 2nd year CS student at Georgia Institute of Technology with a concentration in Intelligence and Theory. I am interested in research in machine learning, especiall deep learning, including AutoML, NLP, and recommender systems. <!-- I love keeping track of the latest advancements in deep learning. --> Other interests include playing basketball and watching movies.</p> 
+  <h1>Hi I'm Mohan Dodda!</h1>
+  <p style="font-size:23px;">I am a 2nd year CS student at Georgia Institute of Technology with a concentration in Intelligence and Theory. I am interested in research in machine learning, especially deep learning, including AutoML, NLP, and recommender systems. <!-- I love keeping track of the latest advancements in deep learning. --> Other interests include playing basketball and watching movies.</p> 
   <!-- <p>I am very interested in Machine Learning, specifically Natural Language Processing and Reccommender Systems.</p>
   <p>Other interests include basketball</p>   -->
 </div>
-
+<!-- 
 
 <div class="container">
   <div class="row">
@@ -64,7 +64,7 @@
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
   </div>
-</div>
+</div> -->
 <!-- <h1 href "C4"> helkrjelrj </h1> -->
 </body>
 </html>
